tests/fixtures/invalid/max_bool_bytes.py
# Cannot call max() with Bool, Bytes
x = max(True, b"hello")
